fix align

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,6 +117,8 @@ h2, h3 {
 }
 
 .content img {
+  z-index: 0;
+  position: absolute;
   padding-top: 70px;
 }
 
